--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -16,6 +16,19 @@ jobs:
       run: |
         pip install -r requirements.txt
         pip install pytest coverage  
+    
+    - name: Setup MOSEK license
+      env:
+        MOSEK_LICENSE_BASE64: ${{ secrets.MOSEK_LICENSE_BASE64 }}
+      run: |
+        echo "$MOSEK_LICENSE_BASE64" | base64 --decode > mosek/mosek.lic
+        echo "MOSEKLM_LICENSE_FILE=mosek/mosek.lic" >> $GITHUB_ENV
+    
+    - name: Install MOSEK
+      run: |
+        pip install mosek
+        mkdir -p ~/mosek
+        cp mosek/mosek.lic ~/mosek/
         
     - name: Run tests
       run: |
