--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -17,18 +17,21 @@ jobs:
         pip install -r requirements.txt
         pip install pytest coverage  
     
-    - name: Setup MOSEK license
-      env:
-        MOSEK_LICENSE_BASE64: ${{ secrets.MOSEK_LICENSE_BASE64 }}
-      run: |
-        echo "$MOSEK_LICENSE_BASE64" | base64 --decode > mosek/mosek.lic
-        echo "MOSEKLM_LICENSE_FILE=mosek/mosek.lic" >> $GITHUB_ENV
-    
     - name: Install MOSEK
       run: |
         pip install mosek
+    
+    - name: Setup License
+      env:
+        MOSEK_LICENSE_BASE64: ${{ secrets.MOSEK_LICENSE_BASE64 }}
+      run: |
         mkdir -p ~/mosek
-        cp mosek/mosek.lic ~/mosek/
+        echo "$MOSEK_LICENSE_BASE64" | base64 --decode > ~/mosek/mosek.lic
+        echo "MOSEKLM_LICENSE_FILE=~/mosek/mosek.lic" >> $GITHUB_ENV
+    
+    - name: Verify License
+      run: |
+        python -c "import mosek; print('MOSEK version:', mosek.getversion())"
         
     - name: Run tests
       run: |
