--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -26,7 +26,7 @@ jobs:
         MOSEK_LICENSE_BASE64: ${{ secrets.MOSEK_LICENSE_BASE64 }}
       run: |
         mkdir -p ~/mosek
-        echo "$MOSEK_LICENSE_BASE64" | base64 --decode > ~/mosek/mosek.lic
+        echo "$MOSEK_LICENSE_BASE64" | base64 -d > ~/mosek/mosek.lic
         echo "MOSEKLM_LICENSE_FILE=~/mosek/mosek.lic" >> $GITHUB_ENV
     
     - name: Verify License
