--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -21,13 +21,18 @@ jobs:
       run: |
         pip install mosek
     
-    - name: Setup License
+    - name: Setup MOSEK license
       env:
         MOSEK_LICENSE_BASE64: ${{ secrets.MOSEK_LICENSE_BASE64 }}
       run: |
-        mkdir -p ~/mosek
-        echo "$MOSEK_LICENSE_BASE64" | base64 -d > ~/mosek/mosek.lic
-        echo "MOSEKLM_LICENSE_FILE=~/mosek/mosek.lic" >> $GITHUB_ENV
+        mkdir -p /home/runner/mosek
+        echo "$MOSEK_LICENSE_BASE64" | base64 -d > /home/runner/mosek/mosek.lic
+        
+        echo "MOSEK_LICENSE_PATH: /home/runner/mosek/mosek.lic"
+        ls -l /home/runner/mosek/mosek.lic
+        
+        echo "MOSEKLM_LICENSE_FILE=/home/runner/mosek/mosek.lic" >> $GITHUB_ENV
+        echo "PATH=$PATH:/home/runner/mosek" >> $GITHUB_ENV
     
         
     - name: Run tests
