--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -37,11 +37,10 @@ jobs:
         
     - name: Run tests
       run: |
-        coverage run -m pytest tests/  
-        coverage xml 
+        pytest --cov=dro test/ --cov-report=xml 
 
     - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
+      uses: codecov/codecov-action@v5
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
-        file: ./coverage.xml
+        
