--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -37,7 +37,7 @@ jobs:
         
     - name: Run tests
       run: |
-        pytest --cov=dro test/ --cov-report=xml 
+        pytest --cov=dro tests/ --cov-report=xml 
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v5
